[package]
name = "tinae"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9.1"
lerp = "0.4"
bevy_spine = { version = "0.4", optional = true }
tinae_macros = { path = "./macros" }

[features]
default = ["tinae_asset_struct", "tinae_cursor", "tinae_force_ratio", "tinae_geometry", "tinae_screen_fade", "tinae_spine", "tinae_time_to_live", "tinae_transform2"]
tinae_asset_struct = []
tinae_cursor = []
tinae_force_ratio = ["tinae_transform2"]
tinae_geometry = ["tinae_transform2"]
tinae_screen_fade = []
tinae_spine = ["bevy_spine", "tinae_transform2"]
tinae_time_to_live = []
tinae_transform2 = []
