[package]
name = "tinae"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10"
lerp = "0.4"
bevy_spine = { git = "https://github.com/jabuwu/bevy_spine", rev = "404f85b7c91b998ce17581a26bfbd44c876a4c7e", optional = true }
tinae_macros = { path = "./macros" }

[features]
default = ["tinae_asset_struct", "tinae_cursor", "tinae_fixed_timestep", "tinae_flow", "tinae_force_ratio", "tinae_geometry", "tinae_scenes", "tinae_screen_fade", "tinae_spine", "tinae_time_to_live", "tinae_transform2"]
tinae_asset_struct = ["tinae_fixed_timestep", "tinae_sub_assets"]
tinae_cursor = []
tinae_fixed_timestep = []
tinae_flow = []
tinae_force_ratio = ["tinae_transform2"]
tinae_geometry = ["tinae_transform2"]
tinae_scenes = []
tinae_screen_fade = ["tinae_fixed_timestep"]
tinae_spine = ["bevy_spine", "tinae_transform2", "tinae_sub_assets"]
tinae_sub_assets = []
tinae_time_to_live = ["tinae_fixed_timestep"]
tinae_transform2 = ["tinae_fixed_timestep"]
